# Doctorate_database

./: Account.py  Mail.py  Search.py  constants.py  dal.py  models.py  pyproject.toml  utils.py
config/: config.json
