[tool.poetry]
name = "doctorate-database"
version = "0.1.0"
description = ""
authors = ["qwerdvd <2450899274@qq.com>"]
readme = "README.md"
packages = [{include = "doctorate_database"}]

[tool.poetry.dependencies]
python = "^3.10"
pymysql = "^1.0.2"
sqlalchemy = "^2.0.5.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
